Added more information to  events
